--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html
 	head
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
 		meta(charset='UTF-8')
+		meta(name='viewport', content='width=device-width, initial-scale=1')
 		meta(name='theme-color', content='#009688')
 		meta(name='msapplication-TileColor', content='#009688')
 		meta(name='msapplication-TileImage', content='/favicons/ms-icon-144x144.png')
