--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,6 +21,10 @@ html
 		link(type='text/css', rel='stylesheet', href='/css/libs.css')
 		link(type='text/css', rel='stylesheet', href='/css/app.css')
 
+		// JS
+		script(type='text/javascript', src='/js/libs.js')
+		script(type='text/javascript', src='/js/app.js')
+
 		block head
 
 	body
