syntax highlight + TOC scroll + other content parsing improvements

--- a/views/common/header.pug
+++ b/views/common/header.pug
@@ -1,5 +1,5 @@
 
-nav.nav.has-shadow
+nav.nav.has-shadow.stickyscroll
 	.nav-left
 		a.nav-item.is-brand(href='/')
 			img(src='/favicons/android-icon-96x96.png', alt='Wiki')
