Added express-brute-loki, UI improvements, error page

--- a/client/scss/layout/_base.scss
+++ b/client/scss/layout/_base.scss
@@ -5,4 +5,5 @@ html {
   box-sizing: inherit;
 }
 
-$family-sans-serif: "Roboto", "Helvetica", "Arial", sans-serif;
+//$family-sans-serif: "Roboto", "Helvetica", "Arial", sans-serif;
+$family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
