--- a/client/scss/layout/_content.scss
+++ b/client/scss/layout/_content.scss
@@ -1,4 +1,11 @@
 
+
+.sd-menus {
+
+	width: 300px;
+
+}
+
 .mkcontent {
 
 	h1 {
@@ -12,13 +19,21 @@
 		font-size: 80%;
 		color: $purple;
 		border-bottom: none;
+
+		&:visited {
+			color: $purple !important;
+		}
+
 	}
 
 	.hljs {
 		padding: 0;
-		border-bottom: 1px solid $grey-light;
-		border-right: 1px solid $grey-light;
 		border-radius: 3px;
+
+		> code {
+			box-shadow: inset 0 0 5px 0 $grey-light;
+		}
+
 	}
 
 	pre + p {
@@ -29,4 +44,40 @@
 		float:right;
 	}
 
+	img.pagelogo {
+		float: right;
+		margin-top: -50px;
+		max-width: 200px;
+	}
+
+	strong {
+		color: $grey-dark;
+	}
+
+}
+
+.content a:not(.button):visited {
+  color: $turquoise;
+  font-weight: 500;
+}
+
+code {
+	font-weight: 500;
+	color: $purple;
+}
+
+p code {
+	padding: 2px 5px;
+	border-radius: 4px;
+}
+
+.card-header {
+	background-color: $turquoise;
+}
+
+.card-header-title {
+	color: #FFF;
+	font-weight: 400;
+	font-size: 16px;
+	padding: 10px 20px;
 }
