--- a/views/common/header.pug
+++ b/views/common/header.pug
@@ -16,6 +16,7 @@ nav.nav.has-shadow.stickyscroll
 		span
 	.nav-right.nav-menu
 		block rootNavRight
+			i.nav-item#notifload
 			a.nav-item(href='#')
 				| History
 			a.nav-item(href='#')
