--- a/client/scss/layout/_header.scss
+++ b/client/scss/layout/_header.scss
@@ -26,3 +26,14 @@ h2.nav-item {
 	}
 
 }
+
+.searchresults {
+	position: fixed;
+	top: 45px;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+	width: 500px;
+	z-index: 1;
+	//display: none;
+}
