--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,6 +24,8 @@ html
 		// JS
 		script(type='text/javascript', src='/js/libs.js')
 		script(type='text/javascript', src='/js/app.js')
+		script(type='text/javascript').
+			var ioHost = window.location.origin + ':!{appconfig.wsPort}/';
 
 		block head
 
