Search results + suggestions

--- a/client/scss/layout/_base.scss
+++ b/client/scss/layout/_base.scss
@@ -7,3 +7,7 @@ html {
 
 //$family-sans-serif: "Roboto", "Helvetica", "Arial", sans-serif;
 $family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+[v-cloak] {
+  display: none;
+}
