--- a/views/layout.pug
+++ b/views/layout.pug
@@ -31,10 +31,10 @@ html
 
 	body
 		#root
-			include ./common/header
-			include ./common/alerts
+			include ./common/header.pug
+			include ./common/alerts.pug
 			main
 				block content
-			include ./common/footer
+			include ./common/footer.pug
 
 		block outside
