--- a/views/pages/edit.pug
+++ b/views/pages/edit.pug
@@ -1,4 +1,4 @@
-extends ../layout
+extends ../layout.pug
 
 block rootNavCenter
 	h2.nav-item= pageData.meta.title
@@ -24,4 +24,4 @@ block content
 	#page-type-edit(data-entrypath=pageData.meta.path)
 		textarea#mk-editor= pageData.markdown
 
-	include ../modals/edit
+	include ../modals/edit.pug
