--- a/views/pages/edit.pug
+++ b/views/pages/edit.pug
@@ -18,7 +18,8 @@ block rootNavRight
 block content
 
 	#page-type-edit(data-entrypath=pageData.meta.path)
-		textarea#mk-editor= pageData.markdown
+		.editor-area
+			textarea#mk-editor= pageData.markdown
 
 	include ../modals/edit-discard.pug
 	include ../modals/editor-link.pug
