Code Block editor fixes + Image editor UI

--- a/views/pages/edit.pug
+++ b/views/pages/edit.pug
@@ -23,4 +23,5 @@ block content
 
 	include ../modals/edit-discard.pug
 	include ../modals/editor-link.pug
+	include ../modals/editor-image.pug
 	include ../modals/editor-codeblock.pug
