Added uploads handler

--- a/views/modals/editor-image.pug
+++ b/views/modals/editor-image.pug
@@ -23,7 +23,7 @@
 					p.control
 						a.button.is-warning.is-outlined(v-on:click="cancel") Cancel
 					p.control
-						a.button.is-primary.is-outlined(v-on:click="insertCode") Insert Image
+						a.button.is-primary.is-outlined(v-on:click="insertImage") Insert Image
 
 		.columns
 			.column.is-one-quarter(style={'max-width':'350px'})
