--- a/client/scss/layout/_content.scss
+++ b/client/scss/layout/_content.scss
@@ -14,6 +14,17 @@
 
 }
 
+.menu {
+	.menu-list a, .menu-nav a {
+		display: flex;
+		align-items: center;
+	}
+
+	.menu-list .icon {
+		margin-right: 8px
+	}
+}
+
 .section.is-small {
 	padding: 20px 20px;
 }
