--- a/client/scss/layout/_base.scss
+++ b/client/scss/layout/_base.scss
@@ -9,7 +9,7 @@ html {
 	padding-top: 52px;
 }
 
-//$family-sans-serif: "Roboto", "Helvetica", "Arial", sans-serif;
+$family-monospace: monospace;
 $family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
 [v-cloak] {
