--- a/client/scss/layout/_content.scss
+++ b/client/scss/layout/_content.scss
@@ -35,7 +35,7 @@
 		border-bottom: 1px dotted $grey-light;
 		padding-bottom: 4px;
 		font-weight: 400;
-		color: desaturate(darken($purple, 15%), 10%);
+		color: desaturate($purple, 20%);
 	}
 
 	a.toc-anchor {
