--- a/views/pages/create.pug
+++ b/views/pages/create.pug
@@ -22,3 +22,6 @@ block content
 			textarea#mk-editor= pageData.markdown
 
 	include ../modals/create-discard.pug
+	include ../modals/editor-link.pug
+	include ../modals/editor-image.pug
+	include ../modals/editor-codeblock.pug
